# pidchat_psp22

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  config.json  package.json  rust-toolchain.toml
contracts/psp22/: Cargo.toml  lib.rs
